Configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ThomasBfrd.github.io/portfolio-react",
+  "homepage": "https://ThomasBfrd.github.io/portfolio-react/accueil",
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
